# dns-core

./: .env.example  .gitignore  CONTRIBUTING.md  E2E_TESTING_GUIDE.md  LICENCE  README.md  docker-compose.yml  docker-manage.ps1  package.json  test_e2e_integration.py
.github/workflows/: user-service-ci.yml
services/api-gateway/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json
services/email-service/: .env.example  .env.test  .gitignore  Dockerfile  PRODUCTION_READINESS.md  README.md  alembic.ini  pyproject.toml  requirements.txt  test_connections.py  test_production_ready.py
services/push-service/: .env.example  .gitignore  COMPLETE_IMPLEMENTATION.md  Dockerfile  README.md  UV_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  test_connections.py  test_production_ready.py  test_push_api.py  test_push_service.py
services/push-service/app/: __init__.py  config.py  main.py
services/push-service/app/api/: dependencies.py
services/push-service/app/api/v1/: __init__.py
services/push-service/app/api/v1/routes/: health.py  push.py
services/push-service/app/consumers/: __init__.py  push_consumer.py
services/push-service/app/models/: push_delivery.py
services/push-service/app/providers/: __init__.py  base.py  fcm.py
services/push-service/app/schemas/: push.py
services/push-service/app/services/: push_service.py
services/push-service/app/utils/: database.py  logger.py  rabbitmq.py
services/push-service/migrations/: env.py  script.py.mako
services/push-service/tests/unit/: test_configuration.py
services/template-service/: .env.example  .gitignore  Dockerfile  PRODUCTION_READINESS.md  requirements.txt  test_production_ready.py
services/user-service/: .dockerignore  .env.example  .env.production  .flake8  .gitignore  (+20 more)
(+117 files in other folders)
